# fastapi-template

./: NOTES.md  README.md
.github/workflows/: deploy-backend-prod.yml  deploy-backend-staging.yml
backend/: pyproject.toml  run.py
backend/deployment/: deploy-backend.sh
backend/src/: environment.py
backend/src/api/: __init__.py
backend/src/api/endpoints/: auth_api.py  billing_api.py  secrets_api.py
backend/src/auth/: wristband.py
backend/src/models/: __init__.py  customer.py  secrets.py  stripe.py
backend/src/services/: secrets_service.py  stripe_service.py  wristband_service.py
backend/src/stores/: __init__.py  base.py  customer_store.py  secrets_store.py
docs/: stripe-architecture.md
frontend/src/components/billing/: SubscriptionGateModal.tsx  SubscriptionSection.tsx
frontend/src/config/: sidebarConfig.ts
frontend/src/layout/: AuthenticatedLayout.tsx
frontend/src/pages/: billing.tsx
infrastructure/: config.tfvars.example  env_files.tf  main.tf  variables.tf
infrastructure/github/: main.tf  variables.tf
infrastructure/stripe/: main.tf  outputs.tf  variables.tf
